# glosse

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  description.md  dev.sh  index.html  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  start.py  vite.config.ts
bench/: bench.ts  debug-pdf-pages.ts  fixture.ts  test-toc-extract.ts
bench/toc-fixtures/: README.md
data/: progress.json
evals/answers/: loop.ts  rubric.md  types.ts
frontend/: .env.example  next.config.ts  package.json
glosse/: __init__.py  cli.py
glosse/codex/: __init__.py  agent.py  llm.py  modes.py  tools.py
glosse/engine/: __init__.py  chunking.py  embeddings.py  html_safety.py  indexing.py  ingest.py  models.py  retrieval.py  storage.py
glosse/server/: __init__.py  app.py  progress.py  routes.py
patches/: foliate-js-pdf-create-document.patch  foliate-js-pdf-expose-pdf.patch  foliate-js-pdf-text-selection.patch  foliate-js-pdf-vite-assets.patch  foliate-js-pdf-vite.patch
scripts/: apply-patches.mjs
src/: index.css  main.tsx
src/ai/: events.ts  highlights.ts  index.ts  profile.ts  summaries.ts  types.ts  weekly.ts
src/components/: BookCover.tsx  BookViewport.tsx  Icons.tsx  RuntimeBanner.tsx  TocDrawer.tsx  TweaksPanel.tsx  bookViewportState.ts
tests/: ask-gate.test.ts  book-index-config.test.ts  book-viewport-state.test.ts  chat-lifecycle.test.ts  embedding-compat.test.ts  embedding-storage.test.ts  indexer.test.ts  pdf-ingest.test.ts  phase2-fk-migration.test.ts  phase2-migration.test.ts  retrieval-cap.test.ts
(+114 files in other folders)
