[project]
name = "glosse"
version = "0.1.0"
description = "Spoiler-aware AI reading companion built on EPUB + Codex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # EPUB parsing + HTML cleaning (reused from reader3)
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",

    # Web server
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",

    # Codex/OpenAI SDK — used by glosse/codex/agent.py
    # (keep even for scaffold so dev can wire it up without a second install)
    "openai>=1.50.0",
]

[project.optional-dependencies]
# Embeddings + vector retrieval land here once the engine dev picks a store.
# Suggested: numpy + sqlite-vec, or chromadb. Left empty for now on purpose.
retrieval = []

[project.scripts]
glosse = "glosse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glosse"]
